# cuda_c_nn

./: README.md
SimpleDenseNetwork/: CMakeLists.txt  Makefile  README.md  main.c  nn.cu  nn.h  nnDense.h  nnKernels.cuh
SimpleDenseNetwork/include/: Linear.h  activation_functions.cuh  backward.cuh  input.h  layer.h  linear.h  matrix.h  memory.cuh  nn.h  nnKernel.cuh  shape.h  tensor.h
SimpleDenseNetwork/src/: Linear.c  activation_functions.cu  backward.cu  input.c  layer.c  linear.c  main.c  matrix.c  memory.cu  nn.c  nnKernel.cu  tensor.c
